# api/routes/user/user_routes.go
@@ -21,6 +21,7 @@ func SetupRoutes(router *gin.Engine, db *gorm.DB) {
 		{
 			userV1.POST("/register", userController.Register)
 			userV1.POST("/login", userController.Login)
+			userV1.POST("/token/refresh", userController.RefreshToken)
 		}
 	}
 
